Don't include scroll offset in paint offset translation for fragmented content.

This fixes a bug in which we would incorrectly include local scroll offset
in the paint offset translation, due to updating paint_offset_root too early
(needs to be set after paint offset is updated).

Bug: 772853
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I1c4c80f3a8d2dc1b737f4b0bb7955b4d8c95fb26
Reviewed-on: https://chromium-review.googlesource.com/714438
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Reviewed-by: Tien-Ren Chen <trchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508409}